# git-craft

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE-MIT  README.md  SECURITY.md  VISION.md
.claude/: settings.json
.claude/commands/: contribute.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
dabcraft/: Cargo.toml
dabcraft/assets/shaders/: bloom.wgsl  composite.wgsl  exposure.wgsl  gtao.wgsl  gtao_blur.wgsl  outline.wgsl  post.wgsl  shadow.wgsl  sky.wgsl  sky_luts.wgsl  taa.wgsl  terrain.wgsl  volumetric.wgsl  water.wgsl
dabcraft/src/: app.rs  main.rs
dabcraft/src/game/: camera.rs  hotbar.rs  input.rs  mod.rs  physics.rs  player.rs  raycast.rs
dabcraft/src/mesh/: greedy.rs  mod.rs  naive.rs  neighborhood.rs  padded.rs  quad.rs
dabcraft/src/render/: arena.rs  atmosphere.rs  (+20 more)
git-craft/: Cargo.toml
git-craft/assets/shaders/: gtao.wgsl  sky.wgsl  sky_luts.wgsl  taa.wgsl  terrain.wgsl  volumetric.wgsl  water.wgsl
git-craft/src/: app.rs  bench.rs  main.rs
git-craft/src/game/: camera.rs  daycycle.rs  hotbar.rs  mod.rs  physics.rs  player.rs  raycast.rs
git-craft/src/mesh/: greedy.rs  mod.rs  neighborhood.rs  padded.rs  quad.rs
git-craft/src/render/: arena.rs  atmosphere.rs  bloom.rs  depth.rs  egui_layer.rs  exposure.rs  frustum.rs  game_ui.rs  gpu.rs  gtao.rs  hot_reload.rs  material.rs  mod.rs  outline.rs  post.rs  shadow.rs  taa.rs  targets.rs  terrain.rs  timestamps.rs  visibility.rs  volumetric.rs  water.rs
git-craft/src/world/: block.rs  chunks.rs  decor.rs  gen.rs  jobs.rs  light.rs  light_engine.rs  mod.rs  persistence.rs  region.rs  section.rs
(+29 files in other folders)
