[package]
name = "git-craft"
version = "0.6.3"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "A performance-focused, Minecraft-style voxel engine in Rust on wgpu, targeting modern shader-pack visuals at 384-block render distance / 120 fps on Apple M4."
repository = "https://github.com/onur-tellioglu/git-craft"
keywords = ["voxel", "gamedev", "wgpu", "renderer", "minecraft"]
categories = ["games", "graphics", "rendering"]
authors = ["Onur Tellioğlu"]

[dependencies]
wgpu = "29"
winit = "0.30.13"
glam = "0.33"
bytemuck = { version = "1.25", features = ["derive"] }
pollster = "0.4"
naga = { version = "29", features = ["wgsl-in"] }
egui = "0.34"
egui-wgpu = "0.34"
egui-winit = "0.34"
log = "0.4"
env_logger = "0.11"
rayon = "1.12"
crossbeam-channel = "0.5"
fastnoise-lite = "1.1"

[profile.dev]
opt-level = 1            # debug builds are unusably slow for voxel work at opt-level 0

[profile.dev.package."*"]
opt-level = 3            # always optimize dependencies (wgpu especially)
